Fix minor layout issues

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -209,7 +209,8 @@ body.index {
 @import "jtinder";
 
 .choices-list {
-  margin: 20px;
+  margin: 0 auto;
+  padding: 20px;
   max-width: 420px;
 
   > div {
@@ -236,14 +237,23 @@ body.events {
     display: flex;
     flex-direction: column;
 
+    .container {
+      display: flex;
+      flex-direction: column;
+      max-width: 420px;
+      margin: 0 auto;
+      height: 100%;
+      flex-grow: 1;
+      transition: all 0.25s;
+    }
+
     .place {
       background-position: center, center;
       background-size: cover;
       align-items: flex-end;
       display: flex;
-      height: 100%;
       flex-grow: 1;
-      // min-height: 200px;
+      transition: all 0.25s;
 
       .description {
         flex-grow: 1;
@@ -371,8 +381,12 @@ body.events {
       }
     }
 
-    .btn {
-      margin: 20px auto;
+    .join {
+      text-align: center;
+
+      .btn {
+        margin: 20px auto;
+      }
     }
   }
 }
