--- a/app/styles/ui/form.scss
+++ b/app/styles/ui/form.scss
@@ -45,7 +45,7 @@ textarea:focus {
   }
 
   input[type=text], input[type=tel], input[type=number], textarea {
-    border: 1px solid $dark;
+    border: 1px solid $text;
     border-radius: 5px;
     display: block;
     font-size: 0.75rem;
@@ -56,14 +56,14 @@ textarea:focus {
     transition: border 0.25s;
 
     &:focus {
-      border: 1px solid $text;
+      border: 1px solid $dark;
       outline: none;
     }
   }
 
   .select {
     background: #fff;
-    border: 1px solid $dark;
+    border: 1px solid $text;
     border-radius: 5px;
     margin: 0 auto 20px;
     max-width: 320px;
@@ -93,7 +93,7 @@ textarea:focus {
     }
 
     &:after {
-      color: #616161;
+      color: $text;
       content: "\f078";
       display: block;
       font-family: "FontAwesome";
